# file-mal-scan-challenge

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
scripts/: entrypoint.sh
src/: main.py
src/api/auth/: models.py  repository.py  router.py  schemas.py  service.py
src/api/scans/: models.py  repository.py  router.py  schemas.py  service.py
src/api/users/: models.py  repository.py  router.py  schemas.py  service.py
src/core/: config.py  database.py  exceptions.py  models.py  repository.py  schemas.py
src/migrations/: env.py
src/migrations/versions/: 994dac5e81a5_initial_migration.py
